--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <h1>To-Do List</h1>
         <div class="input-container">
             <input type="text" id="new-task" placeholder="Add a new task...">
+            <select id="priority">
+                <option value="Low">Low</option>
+                <option value="Medium">Medium</option>
+                <option value="High">High</option>
+            </select>
             <button id="add-task-button">Add</button>
         </div>
         <ul id="task-list"></ul>
